[package]
name = "async-tty"
description = "An asynchronous TTY library for Rust"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/async-tty"
documentation = "https://docs.rs/async-tty"

[dependencies]
color-eyre = "0.6.5"
mio = "1.1.1"
rustix = { version = "1.1.3", features = ["termios"] }
snafu = "0.8.9"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
