[package]
name = "async-tty"
description = "An asynchronous TTY library for Rust"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/async-tty"
documentation = "https://docs.rs/async-tty"

[dependencies]
color-eyre = "0.6"
mio = { version = "1", default-features = false }
rustix = { version = "1", features = ["termios"] }
snafu = "0.9"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
